<resources>
    <string name="app_name">Decidir</string>

    <!--CONTROLES-->
    <string name="edtOpcion">Escribe una opción</string>
    <string name="edtCategoria">Escribe una categoría</string>
    <string name="btnAgregarOpcion">Agregar Opción</string>
    <string name="btnDecidir">Decidir</string>
    <string name="btnAgregarCategoria">Agregar categoría</string>
    <string name="txtResultado">Tu resultado se devería ver aquí</string>
    <string name="infoSpinner">Selecciona una categoría</string>

    <!--MENU-->
    <string name="menu_informacion">Acerca De</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_salir">Salir</string>

</resources>
