<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.macochave.decidir.MainActivity" >

    <item
        android:id="@+id/action_informacion"
        android:title="@string/menu_informacion"
        android:icon="@mipmap/ic_informacion"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_ayuda"
        android:title="@string/menu_ayuda"
        android:icon="@mipmap/ic_ayuda"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_salir"
        android:title="@string/menu_salir"
        android:icon="@mipmap/ic_salir"
        app:showAsAction="always"/>
</menu>