<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="macochave.com.decidir.MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtAddOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/edtOpcion"/>

                    <Button
                        android:id="@+id/btnAddOpcionF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btnAgregarOpcion" />

                    <Button
                        android:id="@+id/btnDecidirF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btnDecidir" />

                    <TextView
                        android:id="@+id/txtResultadoF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtResultado" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinnerDecidir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp" />

                    <Button
                        android:id="@+id/btnDecidirC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btnDecidir" />

                    <TextView
                        android:id="@+id/txtResultadoC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtResultado" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp" />

                    <EditText
                        android:id="@+id/edtAddNewOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/edtOpcion"/>

                    <Button
                        android:id="@+id/btnAddNewOpcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAgregarOpcion" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtAddCategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/edtCategoria"/>

                    <Button
                        android:id="@+id/btnAddCategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAgregarCategoria" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
